# ConsoleAbacus

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: Main.h
src/: Main.cpp
